Fixed a bug with the icon not showing up, fixed the register input fields now they're nice and aligned

--- a/Style/login.css
+++ b/Style/login.css
@@ -56,6 +56,9 @@
     background-color: #e3464c;
     border-color: #e3464c;
   }
+  .test {
+    margin-left: 1.0rem;
+  }
   /* MOBILE */
   @media only screen and (max-width: 825px) {
     .loginCard {
